Aktualisiere den Analysetext für hohen Blutdruck

--- a/blutdruck-analyse.html
+++ b/blutdruck-analyse.html
@@ -454,7 +454,7 @@
             analysisClass = 'bg-yellow-50 text-yellow-800';
           } else {
             analysisText =
-              'Ihre Blutdruckwerte liegen in einem Bereich, der ein erhöhtes Gesundheitsrisiko darstellt. Ein Blutdruckmessgerät ist für Sie besonders wichtig, um Ihre Werte regelmäßig zu überwachen. Das BPER System kann Ihnen helfen, Ihre Gesundheit besser im Blick zu behalten.';
+              'Ihre Blutdruckwerte liegen in einem Bereich, der ein erhöhtes Gesundheitsrisiko darstellt. Blutdruck ist ein kontinuierlich dynamischer Gesundheitsparameter, und statische Werte können Ihre Situation nicht vollständig widerspiegeln, was auch Ihrem Hausarzt die Diagnose erschweren kann. Das BPER System unterstützt Sie dabei, Ihren Blutdruckzustand detailliert und umfassend zu erfassen und aufzuzeichnen – für mehr Klarheit und Sicherheit in Ihrem Alltag.';
             analysisClass = 'bg-red-50 text-red-800';
             isDangerous = false;
           }
