Update links to point to the merged Blutdruck-Test page

--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
             </h1>
           </div>
           <div class="hero-buttons">
-            <a href="blutdruck-test.html" class="btn btn-primary">
+            <a href="blutdruck-test-merged.html" class="btn btn-primary">
               Starte deine Analyse
               <span class="icon">→</span>
             </a>
@@ -1759,7 +1759,7 @@
           </p>
           <div class="hero-buttons mt-16">
             <a
-              href="./blutdruck-test.html"
+              href="./blutdruck-test-merged.html"
               class="btn btn-primary dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
@@ -2278,7 +2278,7 @@
               gewährleisten.
             </p>
             <a
-              href="blutdruck-test.html"
+              href="blutdruck-test-merged.html"
               class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 block text-center"
             >
               Eignung testen
@@ -2352,7 +2352,7 @@
               Gesundheit, die sich lohnt.
             </p>
             <a
-              href="blutdruck-test.html"
+              href="blutdruck-test-merged.html"
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center"
             >
               Eignung testen
@@ -3238,7 +3238,7 @@
               </li>
               <li>
                 <a
-                  href="./blutdruck-test.html"
+                  href="./blutdruck-test-merged.html"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
                   Blutdruck-Test
