Update checkout buttons to 'Jetzt Angebot sichern'

--- a/index.html
+++ b/index.html
@@ -2278,10 +2278,10 @@
               gewährleisten.
             </p>
             <a
-              href="blutdruck-test-merged.html"
-              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 block text-center"
+              href="javascript:void(0)"
+              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
-              Eignung testen
+              Jetzt Angebot sichern
             </a>
           </div>
 
@@ -2352,10 +2352,10 @@
               Gesundheit, die sich lohnt.
             </p>
             <a
-              href="blutdruck-test-merged.html"
-              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center"
+              href="javascript:void(0)"
+              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
-              Eignung testen
+              Jetzt Angebot sichern
             </a>
           </div>
         </div>
