Change links to direct Redtrack URLs

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BPER System - AI-Powered Business Solutions</title>
-    <script
-      type="text/javascript"
-      src="https://blog.bper.online/track.js"
-    ></script>
     <!-- Load Stripe.js -->
     <script src="https://js.stripe.com/v3/"></script>
     <link
@@ -1511,10 +1507,7 @@
             </h1>
           </div>
           <div class="hero-buttons">
-            <a
-              href="blutdruck-test-merged.html--@https://blog.bper.online/click"
-              class="btn btn-primary"
-            >
+            <a href="https://blog.bper.online/click" class="btn btn-primary">
               Starte deine Analyse
               <span class="icon">→</span>
             </a>
@@ -1766,7 +1759,7 @@
           </p>
           <div class="hero-buttons mt-16">
             <a
-              href="./blutdruck-test-merged.html"
+              href="https://blog.bper.online/click"
               class="btn btn-primary dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
@@ -3255,7 +3248,7 @@
               </li>
               <li>
                 <a
-                  href="./blutdruck-test-merged.html"
+                  href="https://blog.bper.online/click"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
                   Blutdruck-Test
