Add Klarna payment integration and info page

--- a/blutdruck-analyse.html
+++ b/blutdruck-analyse.html
@@ -292,6 +292,48 @@
               Reservierung pro Person, um Exklusivität und Fairness zu
               gewährleisten.
             </p>
+            <p class="text-sm text-gray-700 mb-2">
+              Eine professionelle Analyse Ihres Blutdrucks kostet nur EUR
+              299,99. Dieses Paket beinhaltet eine detaillierte schriftliche
+              Beurteilung durch unsere Experten und individuelle Empfehlungen
+              für Ihre Gesundheit.
+            </p>
+
+            <div class="flex items-center mt-4 space-x-2 text-gray-700">
+              <svg
+                class="w-5 h-5 text-green-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 13l4 4L19 7"
+                ></path>
+              </svg>
+              <span>Zahlung per Kreditkarte oder Klarna</span>
+            </div>
+            <div class="flex items-center mt-2 space-x-2 text-gray-700">
+              <svg
+                class="w-5 h-5 text-green-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 13l4 4L19 7"
+                ></path>
+              </svg>
+              <span>Flexible Zahlungsoptionen mit Klarna verfügbar</span>
+            </div>
+
             <button
               class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 checkout-button"
               data-tracking-url="https://blog.bper.online/click"
