--- a/index.html
+++ b/index.html
@@ -2278,6 +2278,12 @@
               gewährleisten.
             </p>
             <a
+              href="klarna-payment-info.html"
+              class="text-blue-600 hover:underline text-sm block mb-4"
+            >
+              Mehr zu Klarna Zahlungsoptionen →
+            </a>
+            <a
               href="javascript:void(0)"
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
@@ -2351,6 +2357,12 @@
               revolutionären Technologie wider – eine Investition in Ihre
               Gesundheit, die sich lohnt.
             </p>
+            <a
+              href="klarna-payment-info.html"
+              class="text-blue-600 hover:underline text-sm block mb-4"
+            >
+              Mehr zu Klarna Zahlungsoptionen →
+            </a>
             <a
               href="javascript:void(0)"
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center checkout-button"
