Add Wissen section with knowledge pages and update footer layout

--- a/index.html
+++ b/index.html
@@ -1565,62 +1565,46 @@
           </div>
 
           <!-- Einfache Karte ohne Bild -->
-          <div class="bento-card">
-            <div class="bento-card-inner">
-              <div class="bento-icon">
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12 6V18"
-                    stroke="#1e5799"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                  />
-                  <path
-                    d="M15.5 8.5C15.5 8.5 13 6 12 6C11 6 8.5 8.5 8.5 8.5"
-                    stroke="#1e5799"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M8.5 15.5C8.5 15.5 11 18 12 18C13 18 15.5 15.5 15.5 15.5"
-                    stroke="#1e5799"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M7 3.33782C8.47087 2.48697 10.1786 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 10.1786 2.48697 8.47087 3.33782 7"
-                    stroke="#1e5799"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                  />
-                </svg>
+          <div class="bento-card" style="transform: translateY(0px)">
+            <div
+              class="bento-card-inner"
+              style="
+                position: relative;
+                min-height: 280px;
+                padding-bottom: 50px;
+              "
+            >
+              <div
+                class="bento-content"
+                style="
+                  position: absolute;
+                  top: 50%;
+                  transform: translateY(-50%);
+                  padding: 0 20px;
+                "
+              >
+                <h3 class="bento-item-title">
+                  Kontinuierliche Präzisionsmessung
+                </h3>
+                <p class="bento-item-description">
+                  Im Gegensatz dazu arbeitet ein kontinuierliches
+                  Blutdruckmessgerät durchgehend, sodass es mehrere Datenpunkte
+                  pro Sekunde aufzeichnen kann.
+                </p>
               </div>
-              <h3 class="bento-item-title">Mobile Integration</h3>
-              <p class="bento-item-description">
-                Greifen Sie über unsere iOS- und Android-Apps mit
-                Cloud-Synchronisation von überall auf Ihre Gesundheitsdaten zu.
-              </p>
-              <div class="bento-tags">
-                <span class="bento-tag">#mobil</span>
-                <span class="bento-tag">#app</span>
+              <div
+                class="bento-tags"
+                style="position: absolute; bottom: 20px; left: 20px"
+              >
+                <span class="bento-tag">#präzision</span>
+                <span class="bento-tag">#kontinuierlich</span>
               </div>
             </div>
           </div>
 
           <!-- Vertikale Karte mit Bild unten (vorher horizontal) -->
-          <div class="bento-card">
+          <div class="bento-card" style="transform: translateY(0px)">
             <div class="bento-card-inner with-image">
-              <div class="bento-content">
-                <h3 class="bento-item-title">Warnungen</h3>
-              </div>
               <div class="bento-image">
                 <img
                   src="images/Bildschirmfoto 2025-03-06 um 23.49.48.png"
@@ -1631,11 +1615,8 @@
           </div>
 
           <!-- Karte mit vertikalem Layout und Bild unten -->
-          <div class="bento-card">
+          <div class="bento-card" style="transform: translateY(0px)">
             <div class="bento-card-inner with-image">
-              <div class="bento-content">
-                <h3 class="bento-item-title">KI-Analyse</h3>
-              </div>
               <div class="bento-image">
                 <img
                   src="images/Bildschirmfoto 2025-03-06 um 23.50.12.png"
@@ -1677,42 +1658,36 @@
             </div>
           </div>
 
-          <div class="bento-card">
-            <div class="bento-card-inner">
-              <div class="bento-icon">
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12Z"
-                    stroke="#1e5799"
-                    stroke-width="1.5"
-                  />
-                  <path
-                    d="M12.5 7.5C12.5 7.77614 12.2761 8 12 8C11.7239 8 11.5 7.77614 11.5 7.5C11.5 7.22386 11.7239 7 12 7C12.2761 7 12.5 7.22386 12.5 7.5Z"
-                    fill="#1e5799"
-                    stroke="#1e5799"
-                  />
-                  <path
-                    d="M12 17V10"
-                    stroke="#1e5799"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                  />
-                </svg>
+          <div class="bento-card" style="transform: translateY(0px)">
+            <div
+              class="bento-card-inner"
+              style="
+                position: relative;
+                min-height: 280px;
+                padding-bottom: 50px;
+              "
+            >
+              <div
+                class="bento-content"
+                style="
+                  position: absolute;
+                  top: 50%;
+                  transform: translateY(calc(-50% - 20px));
+                  padding: 0 20px;
+                "
+              >
+                <h3 class="bento-item-title">Intelligente Datenanalyse</h3>
+                <p class="bento-item-description">
+                  Nutzung von KI zur Interpretation Ihrer Daten und
+                  Bereitstellung personalisierter Gesundheitseinblicke.
+                </p>
               </div>
-              <h3 class="bento-item-title">Ereigniserkennung</h3>
-              <p class="bento-item-description">
-                Automatische Erkennung kritischer Ereignisse mit sofortigen
-                Benachrichtigungen an Sie und Ihre Gesundheitsdienstleister.
-              </p>
-              <div class="bento-tags">
-                <span class="bento-tag">#warnungen</span>
-                <span class="bento-tag">#sicherheit</span>
+              <div
+                class="bento-tags"
+                style="position: absolute; bottom: 20px; left: 20px"
+              >
+                <span class="bento-tag">#ki</span>
+                <span class="bento-tag">#analyse</span>
               </div>
             </div>
           </div>
@@ -2209,7 +2184,7 @@
             </div>
 
             <h3 class="text-xl font-bold mb-2">Spezialangebot</h3>
-            <div class="text-3xl font-bold mb-4">259 €</div>
+            <div class="text-3xl font-bold mb-4">299 €</div>
             <div class="mb-4 text-sm text-gray-500">
               Nur 500 Geräte, pro Person ausschließlich!
             </div>
@@ -2296,7 +2271,7 @@
             class="bg-gray-50 rounded-xl p-6 border border-gray-200 flex flex-col h-full"
           >
             <h3 class="text-xl font-bold mb-2">Einführungspreis</h3>
-            <div class="text-3xl font-bold mb-4">299 €</div>
+            <div class="text-3xl font-bold mb-4">259 €</div>
             <div class="mb-4 text-sm text-gray-500">Regulärer UVP-Preis</div>
             <ul class="mb-6 flex-1 space-y-2 text-sm">
               <li class="flex items-start">
@@ -2352,7 +2327,7 @@
               </li>
             </ul>
             <p class="text-sm text-gray-600 mb-4">
-              Der UVP-Preis von 299 € ist unser Standardeinführungspreis für die
+              Der UVP-Preis von 259 € ist unser Standardeinführungspreis für die
               Vorabvermarktung. Er spiegelt den echten Wert dieser
               revolutionären Technologie wider – eine Investition in Ihre
               Gesundheit, die sich lohnt.
@@ -3102,9 +3077,9 @@
     <!-- Footer Section -->
     <footer class="bg-white border-t border-gray-200 shadow-sm">
       <div class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:px-8">
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-8">
           <!-- Brand Section -->
-          <div class="lg:col-span-2">
+          <div class="lg:col-span-3">
             <p class="text-gray-600 mb-6 max-w-md text-left">
               Präzise Blutdruckmessung für Ihr Wohlbefinden
             </p>
@@ -3133,7 +3108,7 @@
                     d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
                   />
                 </svg>
-                <span>Medizinstraße 123, 10115 Berlin, Deutschland</span>
+                <span>Kundenservice & Bestellung Management</span>
               </div>
               <div
                 class="flex items-center gap-3 transition-colors hover:text-blue-700"
@@ -3153,9 +3128,9 @@
                   />
                 </svg>
                 <a
-                  href="tel:+4930123456789"
+                  href="tel:041049004100"
                   class="hover:underline focus:underline focus:outline-none"
-                  >+49 30 123456789</a
+                  >041049004100</a
                 >
               </div>
               <div
@@ -3176,13 +3151,16 @@
                   />
                 </svg>
                 <a
-                  href="mailto:info@bper-medical.de"
+                  href="mailto:info@bper.me"
                   class="hover:underline focus:underline focus:outline-none"
-                  >info@bper-medical.de</a
+                  >info@bper.me</a
                 >
               </div>
             </div>
           </div>
+
+          <!-- Empty column to create spacing -->
+          <div class="hidden lg:block"></div>
 
           <!-- Links Sections -->
           <div>
@@ -3194,76 +3172,34 @@
             <ul class="space-y-3">
               <li>
                 <a
-                  href="/produkte/standard"
+                  href="https://www.micro-giant.eu/"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
-                  BPER Standard
+                  Startseite
                 </a>
               </li>
               <li>
                 <a
-                  href="/produkte/premium"
+                  href="https://www.micro-giant.eu/bper"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
-                  BPER Premium
+                  BPER System
                 </a>
               </li>
               <li>
                 <a
-                  href="/produkte/pro"
+                  href="https://www.micro-giant.eu/forschung"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
-                  BPER Pro
+                  Forschung
                 </a>
               </li>
               <li>
                 <a
-                  href="/produkte/zubehoer"
+                  href="https://www.micro-giant.eu/uber-uns"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
-                  Zubehör
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <h3
-              class="text-sm font-semibold text-gray-900 tracking-wider uppercase mb-4"
-            >
-              Service
-            </h3>
-            <ul class="space-y-3">
-              <li>
-                <a
-                  href="/service/garantie"
-                  class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
-                >
-                  Garantie
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/service/reparatur"
-                  class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
-                >
-                  Reparatur
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/service/kalibrierung"
-                  class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
-                >
-                  Kalibrierung
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://blog.bper.online/click"
-                  class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
-                >
-                  Blutdruck-Test
+                  Über Uns
                 </a>
               </li>
             </ul>
