--- a/index.html
+++ b/index.html
@@ -3311,7 +3311,7 @@
             <!-- Copyright and Legal Links -->
             <div class="flex flex-col md:flex-row items-center gap-4">
               <p class="text-sm text-gray-500">
-                © 2024 BPER Medical GmbH. Alle Rechte vorbehalten.
+                &copy; 2024 L and Partners Co. Ltd. Alle Rechte vorbehalten.
               </p>
               <div class="flex flex-wrap gap-4 justify-center">
                 <a
